--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.0",
-    "@supabase/supabase-js": "^2.47.9",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.20",
@@ -20,6 +19,7 @@
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.1",
     "github-slugger": "^2.0.0",
+    "mongodb": "^6.15.0",
     "next": "^15.2.4",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.49",
@@ -37,6 +37,6 @@
   "devDependencies": {
     "encoding": "^0.1.13",
     "sharp": "^0.32.6",
-    "velite": "^0.2.1"
+    "velite": "^0.2.2"
   }
 }
