--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "shiki": "^1.24.2",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "Velite": "npm:velite@^0.2.2"
   },
   "devDependencies": {
     "encoding": "^0.1.13",
     "sharp": "^0.32.6",
-    "velite": "^0.2.2"
+    "velite": "^0.0.0"
   }
 }
