--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.0",
+    "@next/mdx": "^15.2.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.20",
