--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ yarn-error.log*
 
 # local env files
 .env
+.env.local
+.env.development
+.env.production
+.secret
+config.js
 .env*.local
 
 # vercel
